--- a/src/main.css
+++ b/src/main.css
@@ -171,6 +171,15 @@
       height: 0;
     }
   }
+
+  @keyframes infinite-scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-33.333%);
+    }
+  }
 }
 
 /*
